--- a/BanXeMay/Views/Shared/_Frontend.cshtml
+++ b/BanXeMay/Views/Shared/_Frontend.cshtml
@@ -59,10 +59,10 @@
         </div>
     </nav>
     <!-- Header-->
-    <header class="bg-dark py-5">
+    <header   class="py-5" style="background-image: url('../images/products/gia-xe-honda-vietnam-uu-dai-tet-2023-motosaigon-5.jpg'); ">
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
-                <h1 class="display-4 fw-bolder">Shop in style</h1>
+                <h1 class="display-4 fw-bolder">Nhan do xe</h1>
                 <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
             </div>
         </div>
